Restringindo o acesso via rede apenas a localhost